call tokenstats with pagination
