# src/main/webapp/app/shared/api/generated/API-docs.json
@@ -1420,33 +1420,6 @@
         "deprecated": false
       }
     },
-    "/api/cronjob/remove-old-token-stats": {
-      "get": {
-        "tags": [
-          "cron-job-controller"
-        ],
-        "summary": "removeOldTokenStats",
-        "operationId": "removeOldTokenStatsUsingGET",
-        "produces": [
-          "*/*"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        },
-        "deprecated": false
-      }
-    },
     "/api/cronjob/renew-tokens": {
       "get": {
         "tags": [
